# physically-based-rendering

./: Cargo.toml  README.md  TYPE_DEFINITIONS.md
src/: main.rs  renderer.rs
src/DirectX/: context.rs  helpers.rs  mod.rs  renderer.rs
src/OpenGL/: context.rs  helpers.rs  mod.rs  renderer.rs
src/shaders/triangle/: pixel.hlsl  vertex.hlsl
src/util/: mod.rs  ray.rs  types.rs
src/util/bounds/: bounds3.rs  mod.rs
src/util/interactions/: interaction.rs  mod.rs
src/util/math/: mod.rs  spherical_geometry.rs  square_matrix.rs  transformations.rs
src/util/rays/: ray.rs
src/util/tuple/: mod.rs  tuple.rs  tuple2.rs  tuple3.rs
src/util/vector/: mod.rs  vector3.rs
