[package]
name = "pbrt"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
# Use compatible versions - glutin-winit 0.3 works with winit 0.28 and glutin 0.30
glutin = "0.30"
glutin-winit = "0.3"
winit = "0.28"
gl = "0.14"
raw-window-handle = "0.5"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading"
]
